--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ body {
 
 .sidebar {
     width: 25%;
+    height: 100vh;
     background-color: #2c3e50;
     color: #ecf0f1;
     padding: 20px;
@@ -32,6 +33,7 @@ body {
     width: 100px;
     height: 100px;
     border-radius: 50%;
+    border-color: white;
     margin-bottom: 10px;
 }
 
